# concurrentes-tp2

./: .gitignore  Cargo.toml  readme.md
coffee_maker/: Cargo.toml  config.json  readme.md
coffee_maker/src/: coffee_maker.rs  config.rs  log.rs  main.rs
coffee_maker/src/coffee_maker/: messages.rs  mod.rs  order.rs
coffee_maker/src/order_processor/: messages.rs  mod.rs  processor.rs  processor_messages.rs  result.rs
coffee_maker/src/orders/: diff_orders.csv  one_order.csv  one_recharge.csv  repeated_order.csv
common/: Cargo.toml
common/src/: error.rs  lib.rs  log.rs  message_handler.rs  packet.rs  udp_trait.rs
common/src/socket/: error.rs  messages.rs  mod.rs  read.rs  write.rs
ejemplos/: readme.md
ejemplos/1/: readme.md  start.sh
ejemplos/1/cafeteras/: orders_1.csv  orders_2.csv
ejemplos/1/servidores/: cfg_1.json  cfg_2.json
ejemplos/2/: readme.md  start.sh
ejemplos/2/cafeteras/: orders_1.csv  orders_3.csv
ejemplos/2/servidores/: cfg_2.json  cfg_3.json
ejemplos/3/: readme.md  start.sh
ejemplos/3/cafeteras/: orders_1.csv  orders_2.csv
ejemplos/3/servidores/: cfg_1.json  cfg_3.json
ejemplos/4/: readme.md  start.sh
ejemplos/4/cafeteras/: cfg_1.json  cfg_2.json  cfg_3.json  orders_1.csv  orders_2.csv
ejemplos/4/servidores/: cfg_2.json  cfg_3.json
ejemplos/5/: readme.md  start.sh
ejemplos/5/cafeteras/: cfg_1.json  cfg_2.json  cfg_3.json  cfg_4.json  cfg_5.json  orders.csv
ejemplos/5/servidores/: cfg_1.json  cfg_2.json  cfg_3.json  cfg_4.json  cfg_5.json
firewall/: README.md
firewall/src/: firewall.rs  lib.rs  packet.rs  socket_encoder.rs  udp_trait.rs
firewall/src/rules/: block_two_hosts.rs  mod.rs
server/: Cargo.toml  config.json  readme.md
server/configs/: cfg_1.json  cfg_2.json  cfg_3.json
server/logs_test/: logs.log.2022-11-22-04
server/src/: client_connections.rs  config.rs  main.rs  server_id.rs
server/src/dist_mutex/: impl_traits.rs  messages.rs  messages_impls.rs  mod.rs  packets.rs  server_id.rs
server/src/dist_mutex/messages/: ack.rs  mod.rs  ok.rs  request.rs
server/src/dist_mutex/messages/public/: acquire.rs  do_with_lock.rs  mod.rs  release.rs
server/src/dist_mutex/packets/: ack.rs  mod.rs  ok.rs  release.rs  request.rs
server/src/network/: connection.rs  connections.rs  error.rs  listener.rs  messages.rs  mod.rs  socket2.rs  status.rs
server/src/network/socket/: messages.rs  mod.rs  read.rs  write.rs
server/src/packet_dispatcher/: error.rs  messages.rs  messages_impls.rs  mod.rs  packet.rs  tests.rs
server/src/packet_dispatcher/messages/: add_mutex.rs  add_points.rs  add_server.rs  broadcast.rs  dispatch.rs  listen.rs  mod.rs  prune.rs  send.rs  send_from_mutex.rs  try_add_points.rs
server/src/packet_dispatcher/messages/public/: block_points.rs  die.rs  discount.rs  mod.rs  queue_points.rs
server/src/packet_dispatcher/packet/: mod.rs  sync_request.rs  sync_response.rs
server/src/socket/: connections.rs  mod.rs  socket.rs
server/src/two_phase_commit/: messages.rs  messages_impls.rs  mod.rs  packets.rs
server/src/two_phase_commit/messages/: commit.rs  forward_database.rs  mod.rs  prepare.rs  remove_transaction.rs  rollback.rs  update_database.rs  vote_no.rs  vote_yes.rs
server/src/two_phase_commit/messages/public/: commit_complete.rs  commit_request.rs  mod.rs  submit.rs
server/src/two_phase_commit/packets/: mod.rs  prepare.rs
