[package]
name = "coffee_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.7.0"
tokio = "1.21.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
tracing = "0.1.29"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3.1", features = ["json"]}

[dev-dependencies]
tokio-test = "0.4.2"
tokio = { version = "*", features = ["macros", "io-util", "rt-multi-thread"] }
mockall = "0.11.3"