[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.13.0", optional = true }
actix-rt = { version = "2.7.0", optional = true }
tokio = { version = "1.21.2", optional = true }
mockall_double = { version ="0.3.0", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0.87", optional = true }
mockall = { version = "0.11.3", optional = true }

[dev-dependencies]
tokio-test = "0.4.2"
tokio = { version = "*", features = ["macros", "io-util"] }
mockall = { version = "*" }

[features]
message_handler = ["dep:actix"]
socket = [
    "dep:actix",
    "dep:actix-rt",
    "dep:tokio",
    "dep:mockall_double",
    "dep:serde",
    "dep:serde_json",
    "message_handler"
]
socket_test = ["socket", "dep:mockall"]