[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.7.0"
tokio = "1.21.2"
mockall_double = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.1.0"
serde_json = "1.0.87"
mockall = { version = "0.11.3", optional = true }
tracing = "0.1.29"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3.1", features = ["json"]}

[dev-dependencies]
tokio-test = "0.4.2"
tokio = { version = "*", features = ["macros", "io-util"] }
mockall = { version = "*" }

[features]
socket_test = ["dep:mockall"]